--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ember-cli-dependency-checker",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Ember CLI addon for detecting missing npm and bower dependencies before executing ember commands",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -10,12 +11,19 @@
     "build": "ember build",
     "test": "ember test"
   },
-  "repository": "https://github.com/stefanpenner/ember-cli",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/quaertym/ember-cli-dependency-checker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/quaertym/ember-cli-dependency-checker/issues"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
+  "author": "Emre Unal",
   "license": "MIT",
+  "readmeFile": "README.md",
   "devDependencies": {
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "0.3.1",
@@ -31,7 +39,14 @@
     "glob": "^4.0.5"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember-cli",
+    "ember",
+    "node",
+    "npm",
+    "bower",
+    "dependency",
+    "check"
   ],
   "ember-addon": {
     "configPath": "tests/dummy/config"
