--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,44 @@
 {
+  "predef": [
+    "console",
+    "it",
+    "describe",
+    "beforeEach",
+    "afterEach",
+    "before",
+    "after",
+    "-Promise"
+  ],
+  "proto": true,
+  "strict": true,
+  "indent": 2,
+  "camelcase": true,
   "node": true,
-  "strict": false
+  "browser": false,
+  "boss": true,
+  "curly": true,
+  "latedef": "nofunc",
+  "debug": false,
+  "devel": false,
+  "eqeqeq": true,
+  "evil": true,
+  "forin": false,
+  "immed": false,
+  "laxbreak": false,
+  "newcap": true,
+  "noarg": true,
+  "noempty": false,
+  "quotmark": true,
+  "nonew": false,
+  "nomen": false,
+  "onevar": false,
+  "plusplus": false,
+  "regexp": false,
+  "undef": true,
+  "unused": true,
+  "sub": true,
+  "trailing": true,
+  "white": false,
+  "eqnull": true,
+  "esnext": true
 }
