--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "doc": "doc",
     "test": "tests"
   },
+  "main": "lib/dependency-checker",
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember test"
+    "test": "node tests/runner"
   },
   "repository": {
     "type": "git",
@@ -28,15 +29,18 @@
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "0.3.1",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "chai": "^1.9.2",
     "ember-cli": "0.1.2",
     "ember-cli-content-security-policy": "0.3.0",
-    "ember-export-application-global": "^1.0.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
     "ember-data": "1.0.0-beta.10",
+    "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "mocha": "^2.0.1",
+    "mocha-jshint": "0.0.9"
   },
   "keywords": [
     "ember-addon",
