--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "broccoli-asset-rev": "0.3.1",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "chai": "^1.9.2",
-    "ember-cli": "0.1.2",
+    "ember-cli": "git://github.com/stefanpenner/ember-cli#master",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
