Use ember-cli v0.2.3

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,25 +1,15 @@
 {
   "predef": [
-    "console",
-    "it",
-    "describe",
-    "beforeEach",
-    "afterEach",
-    "before",
-    "after",
+    "document",
+    "window",
     "-Promise"
   ],
-  "proto": true,
-  "strict": true,
-  "indent": 2,
-  "camelcase": true,
   "node": true,
-  "browser": false,
+  "browser": true,
   "boss": true,
   "curly": true,
-  "latedef": "nofunc",
   "debug": false,
-  "devel": false,
+  "devel": true,
   "eqeqeq": true,
   "evil": true,
   "forin": false,
@@ -28,17 +18,16 @@
   "newcap": true,
   "noarg": true,
   "noempty": false,
-  "quotmark": true,
   "nonew": false,
   "nomen": false,
   "onevar": false,
   "plusplus": false,
   "regexp": false,
   "undef": true,
-  "unused": true,
   "sub": true,
-  "trailing": true,
+  "strict": false,
   "white": false,
   "eqnull": true,
-  "esnext": true
+  "esnext": true,
+  "unused": true
 }
