--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,11 @@
-# compiled output
-/dist
-/tmp
+bower_components/
+tests/
+tmp/
+dist/
 
 # dependencies
-/node_modules
+node_modules/
 !tests/fixtures/**/node_modules
-/bower_components
 
 # misc
 /.sass-cache
@@ -17,22 +17,19 @@ testem.log
 *.tgz
 
 # other ember-cli dirs
-/addon
-/app
-/config
-/tests
-/vendor
+addon/
+app/
+config/
+tests/
+vendor/
 
-# other ember-cli files
-/Brocfile.js
-/testem.json
-/bower.json
-
-# other ember-cli dotfiles
-/.bowerrc
-/.editorconfig
-/.ember-cli
-/.jshintrc
-/.travis.yml
-
-
+.jshintrc
+.bowerrc
+.editorconfig
+.ember-cli
+.travis.yml
+.npmignore
+**/.gitkeep
+bower.json
+Brocfile.js
+testem.json
