--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 ---
 language: node_js
+node_js:
+  - "0.12"
 
 sudo: false
 
 cache:
   directories:
     - node_modules
+
+matrix:
+  fast_finish: true
+
+before_install:
+  - export PATH=/usr/local/phantomjs-2.0.0/bin:$PATH
+  - "npm config set spin false"
+  - "npm install -g npm@^2"
 
 install:
   - npm install -g bower
