--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
   "license": "MIT",
   "readmeFile": "README.md",
   "devDependencies": {
-    "body-parser": "^1.2.0",
-    "broccoli-asset-rev": "0.3.1",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "broccoli-asset-rev": "^2.0.2",
     "chai": "^1.9.2",
-    "ember-cli": "git://github.com/stefanpenner/ember-cli#master",
-    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli": "0.2.3",
+    "ember-cli-app-version": "0.3.3",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "0.0.8",
+    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.0",
-    "ember-data": "1.0.0-beta.10",
-    "ember-export-application-global": "^1.0.0",
-    "express": "^4.8.5",
-    "glob": "^4.0.5",
+    "ember-cli-qunit": "0.3.10",
+    "ember-cli-uglify": "1.0.1",
+    "ember-data": "1.0.0-beta.16.1",
+    "ember-export-application-global": "^1.0.2",
+    "ember-disable-prototype-extensions": "^1.0.0",
+    "glob": "^5.0.5",
     "mocha": "^2.0.1",
     "mocha-jshint": "0.0.9"
   },
@@ -52,12 +54,10 @@
     "dependency",
     "check"
   ],
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
-  },
   "dependencies": {
     "chalk": "^0.5.1",
     "is-git-url": "^0.2.0",
-    "semver": "^4.1.0"
+    "semver": "^4.1.0",
+    "ember-cli-babel": "^5.0.0"
   }
 }
