--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
+    "glob": "^5.0.14",
     "mocha": "^2.0.1",
     "mocha-jshint": "0.0.9"
   },
