--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@
 language: node_js
 node_js:
   - "0.12"
+  - "4"
+  - "6"
+  - "7"
 
 sudo: false
 
 cache:
   directories:
-    - node_modules
+    - $HOME/.npm
+    - $HOME/.cache # includes bowers cache
 
 matrix:
   fast_finish: true
