--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "ember-cli": "^2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.2",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
@@ -46,10 +46,12 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
+    "eslint-plugin-chai": "0.0.1",
+    "eslint-plugin-mocha": "^4.8.0",
     "glob": "^5.0.14",
     "loader.js": "^4.0.10",
     "mocha": "^2.0.1",
-    "mocha-jshint": "0.0.9"
+    "mocha-eslint": "^3.0.1"
   },
   "keywords": [
     "ember-addon",
