--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "is-git-url": "^1.0.0",
+    "resolve": "^1.5.0",
     "semver": "^5.3.0"
   },
   "ember-addon": {
