--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,26 +13,19 @@ environment:
 
 # Install scripts. (runs after repo cloning)
 install:
-  - git rev-parse HEAD
-  # Get the latest stable version of Node 0.STABLE.latest
   - ps: Install-Product node $env:nodejs_version
-  # Install PhantomJS
-  - cinst PhantomJS -y
-  # hide python so node-gyp won't try to build native extentions
-  - rename C:\Python27 Python27hidden
-  # Typical npm stuff.
-  - md C:\nc
-  - npm config set cache C:\nc
-  - npm version
-  - npm install --no-optional
-  - npm install -g bower
-  - bower install
+  - appveyor-retry yarn --no-lockfile --non-interactive
+
+
+cache:
+  - '%LOCALAPPDATA%\Yarn'
 
 # Post-install test scripts.
 test_script:
   # Output useful info for debugging.
-  - npm version
-  - cmd: npm test
+  - yarn --version
+  - git rev-parse HEAD
+  - cmd: yarn test
 
 # Don't actually build.
 build: off
