--- a/package.json
+++ b/package.json
@@ -2,27 +2,39 @@
   "name": "ember-cli-dependency-checker",
   "version": "2.0.1",
   "description": "Ember CLI addon for detecting missing npm and bower dependencies before executing ember commands",
+  "keywords": [
+    "bower",
+    "check",
+    "dependency",
+    "ember",
+    "ember-addon",
+    "ember-cli",
+    "node",
+    "npm"
+  ],
+  "bugs": {
+    "url": "https://github.com/quaertym/ember-cli-dependency-checker/issues"
+  },
+  "license": "MIT",
+  "author": "Emre Unal",
   "directories": {
     "doc": "doc",
     "test": "tests"
-  },
-  "scripts": {
-    "test": "node tests/runner",
-    "test:debug": "node debug tests/runner"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/quaertym/ember-cli-dependency-checker.git"
   },
-  "bugs": {
-    "url": "https://github.com/quaertym/ember-cli-dependency-checker/issues"
+  "scripts": {
+    "test": "node tests/runner",
+    "test:debug": "node debug tests/runner"
   },
-  "engines": {
-    "node": ">= 4"
+  "dependencies": {
+    "chalk": "^2.3.0",
+    "is-git-url": "^1.0.0",
+    "resolve": "^1.5.0",
+    "semver": "^5.3.0"
   },
-  "author": "Emre Unal",
-  "license": "MIT",
-  "readmeFile": "README.md",
   "devDependencies": {
     "chai": "^4.1.2",
     "ember-cli": "^2.16.2",
@@ -32,23 +44,11 @@
     "mocha": "^4.0.1",
     "mocha-eslint": "^4.1.0"
   },
-  "keywords": [
-    "ember-addon",
-    "ember-cli",
-    "ember",
-    "node",
-    "npm",
-    "bower",
-    "dependency",
-    "check"
-  ],
-  "dependencies": {
-    "chalk": "^2.3.0",
-    "is-git-url": "^1.0.0",
-    "resolve": "^1.5.0",
-    "semver": "^5.3.0"
+  "engines": {
+    "node": ">= 4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  }
+  },
+  "readmeFile": "README.md"
 }
