--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
+    "find-yarn-workspace-root": "^1.1.0",
     "is-git-url": "^1.0.0",
     "resolve": "^1.5.0",
     "semver": "^5.3.0"
