--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
+/dist/
+/tmp/
 
 # dependencies
-/node_modules
+/bower_components/
+/node_modules/
 !tests/fixtures/**/node_modules
-/bower_components
 
 # misc
 /.sass-cache
 /connect.lock
-/coverage/*
+/coverage/
 /libpeerconnection.log
-npm-debug.log
-testem.log
+/npm-debug.log*
+/testem.log
+/yarn-error.log
