--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 ---
 language: node_js
 node_js:
-  - "4"
   - "6"
   - "8"
-  - "9"
+  - "10"
 
 sudo: false
 
@@ -14,12 +13,8 @@ cache:
 matrix:
   fast_finish: true
 
-before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash
-  - export PATH=$HOME/.yarn/bin:$PATH
-
 install:
-  - yarn install --no-lockfile --non-interactive
+  - yarn install --frozen-lockfile --non-interactive
 
 script:
   - yarn test
