Bypass dependency check on `ember init`
As described by a [GitHub issue][0], `ember init` would probably
make more sense skipping dependency check, so this commit looks
into the arguments received and, if the command issued was `init`,
skips dependency check and simply displays a warning.

[0]: https://github.com/ember-cli/ember-cli/issues/6277

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "glob": "^7.1.1",
     "mocha": "^5.2.0",
     "mocha-eslint": "^4.1.0",
-    "qunit-dom": "^0.7.0"
+    "qunit-dom": "^0.7.0",
+    "sinon": "^13.0.0"
   },
   "peerDependencies": {
     "ember-cli": "~3.2.0"
