--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,15 @@ environment:
   matrix:
     - nodejs_version: "8"
     - nodejs_version: "10"
+image:
+  - Ubuntu
+  - Visual Studio 2017
 
 # Install scripts. (runs after repo cloning)
 install:
-  - ps: Install-Product node $env:nodejs_version
-  - appveyor-retry yarn --frozen-lockfile --non-interactive
+  - cmd: powershell Install-Product node $env:nodejs_version
+  - sh: nvm install $nodejs_version
+  - yarn --frozen-lockfile --non-interactive
 
 cache:
   - '%LOCALAPPDATA%\Yarn'
