--- a/package.json
+++ b/package.json
@@ -31,27 +31,25 @@
     "test:debug": "node debug tests/runner"
   },
   "dependencies": {
-    "chalk": "^2.3.0",
-    "find-yarn-workspace-root": "^1.1.0",
+    "chalk": "^2.4.2",
+    "find-yarn-workspace-root": "^1.2.1",
     "is-git-url": "^1.0.0",
-    "resolve": "^1.5.0",
-    "semver": "^5.3.0"
+    "resolve": "^1.22.0",
+    "semver": "^5.7.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
+    "babel-eslint": "^10.1.0",
+    "chai": "^4.3.6",
     "ember-cli": "~3.2.0",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-source-channel-url": "^1.0.1",
-    "ember-try": "^0.2.23",
-    "eslint-plugin-chai": "0.0.1",
-    "eslint-plugin-ember": "^5.0.0",
-    "eslint-plugin-mocha": "^5.1.0",
-    "eslint-plugin-node": "^6.0.1",
-    "glob": "^7.1.1",
-    "mocha": "^5.2.0",
-    "mocha-eslint": "^4.1.0",
-    "qunit-dom": "^0.7.0",
-    "sinon": "^13.0.0"
+    "eslint": "^7.32.0",
+    "eslint-plugin-chai": "^0.0.1",
+    "eslint-plugin-ember": "^10.6.0",
+    "eslint-plugin-mocha": "^9.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "glob": "^8.0.1",
+    "mocha": "^9.2.2",
+    "mocha-eslint": "^7.0.0",
+    "sinon": "^13.0.2"
   },
   "peerDependencies": {
     "ember-cli": "^3.2.0 || ^4.0.0"
